--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "files.associations": {
         "stdio.h": "c",
         "_stdio.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "string.h": "c",
+        "_string.h": "c"
     },
     "editor.showUnused": false
 }
